Updated whiteboard code to modular components.

--- a/app/Resources/js/tsconfig.json
+++ b/app/Resources/js/tsconfig.json
@@ -1,6 +1,9 @@
 {"files": [
         "./tutorial/WhiteBoardController.ts",
+        "./tutorial/WhiteBoardWorker.ts",
         "./tutorial/WhiteBoardView.ts",
+        "./tutorial/Elements/FreeCurveElement.ts",
+        "./tutorial/Elements/WhiteBoardTextElement.ts",
         "./tutorial/TextWorker.ts",
         "./tutorial/fitcurves.ts",
         "./typings/react.d.ts",
