Partial Completion of TextBox

--- a/app/Resources/js/tsconfig.json
+++ b/app/Resources/js/tsconfig.json
@@ -1,14 +1,18 @@
-{"files": [
+{
+    "files":
+    [
         "./tutorial/WhiteBoardController.ts",
         "./tutorial/WhiteBoardWorker.ts",
         "./tutorial/WhiteBoardView.ts",
         "./tutorial/Elements/FreeCurveElement.ts",
         "./tutorial/Elements/FreeCurveView.ts",
         "./tutorial/Elements/WhiteBoardTextElement.ts",
+        "./tutorial/Elements/WhiteBoardTextView.ts",
         "./tutorial/TextWorker.ts",
         "./tutorial/fitcurves.ts",
         "./typings/react.d.ts",
         "./typings/react-dom.d.ts",
         "./typings/immutable.d.ts",
         "./typings/whiteboard.d.ts"
-]}
+    ]
+}
