--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,4 +74,6 @@ assetic:
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
     filters:
+        uglifyjs2:
+            bin: /usr/bin/uglifyjs
         cssrewrite: ~
