Move to Bitbucket

--- a/app/Resources/js/tsconfig.json
+++ b/app/Resources/js/tsconfig.json
@@ -8,6 +8,10 @@
         "./tutorial/Elements/FreeCurveView.ts",
         "./tutorial/Elements/WhiteBoardTextElement.ts",
         "./tutorial/Elements/WhiteBoardTextView.ts",
+        "./tutorial/Elements/UploadElement.ts",
+        "./tutorial/Elements/UploadView.ts",
+        "./tutorial/Elements/HighlightElement.ts",
+        "./tutorial/Elements/HighlightView.ts",
         "./tutorial/TextWorker.ts",
         "./tutorial/fitcurves.ts",
         "./typings/react.d.ts",
