--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,13 +25,16 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
-    trusted_proxies: ~
+    trusted_proxies:  [130.211.35.242]
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  session.handler.pdo
     fragments:       ~
     http_method_override: true
+    http_method_override: true
     assets: ~
+    php_errors:
+        log: true
 
 # Twig Configuration
 twig:
