--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,10 +4,10 @@ parameters:
     mailer_host: 127.0.0.1
     mailer_user: null
     mailer_password: null
-    database.host: 130.211.247.213
-    database.port: 3306
+    database.host: '130.211.247.213'
+    database.port: '3306'
     database.name: Users
-    database.user: root
-    database.password: nevermore!123
+    database.user: 'whiteboard'
+    database.password: 'u;Fq>5QPqVvAhsCy'
 
     secret: 7e501ffeb426888ea59e63aa15b931a7f9d28d24
