--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,10 +4,10 @@ parameters:
     mailer_host: 127.0.0.1
     mailer_user: null
     mailer_password: null
-    database.host: '130.211.247.213'
-    database.port: '3306'
+    database.unix_socket: /cloudsql/wittylizard-162000:asia-east1:wittylizard-devsql
+    database.port: 3306
     database.name: Users
-    database.user: 'whiteboard'
-    database.password: 'u;Fq>5QPqVvAhsCy'
+    database.user: root
+    database.password: nevermore!123
 
     secret: 7e501ffeb426888ea59e63aa15b931a7f9d28d24
